kubernetes/backend-pod.yaml
apiVersion: v1

kind: Pod

metadata:
  name: football-backend

spec:
  containers:
    - name: backend
      image: annihilator29/football-backend:latest

      ports:
        - containerPort: 3000
