kubernetes/backend-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: football-backend

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
